--- a/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
@@ -50,7 +50,7 @@ When setting the `FRONTEND_AUTO_ACCEPT_SHARES` to `true`, all incoming shares wi
 
 === The Password Policy
 
-Note that the password policy currently impacts only *public link password validation*.
+IMPORTANT: Note that the password policy impacts only *public link password validation*.
 
 With the password policy, mandatory criteria for the password can be defined via the environment variables listed below.
 
