[4.0] [PR 896] Add that no services have been added in ocis v4
Backport of PR #896

--- a/modules/ROOT/pages/deployment/services/services.adoc
+++ b/modules/ROOT/pages/deployment/services/services.adoc
@@ -18,6 +18,10 @@ Also see the supporting documents describing various topics around services.
 
 The following services have been introduced with the releases listed:
 
+=== Infinite Scale 4.0.0
+
+No services have been added with Infinite Scale version 4.0.0.
+
 === Infinite Scale 3.0.0
 
 [width="100%",cols="25%,~",options="header"]
